--- a/Music Player/Stage 2/src/main/res/layout/activity_main.xml
+++ b/Music Player/Stage 2/src/main/res/layout/activity_main.xml
@@ -6,13 +6,13 @@
     tools:context=".MainActivity">
 
   <TextView
-      android:id="@+id/songTitleTextView"
+      android:id="@+id/songTitleTv"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="title1"
       tools:ignore="HardcodedText"/>
   <TextView
-      android:id="@+id/songArtistTextView"
+      android:id="@+id/songArtistTv"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="artist1"
@@ -37,14 +37,14 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
       <TextView
-          android:id="@+id/currentTimeTextView"
+          android:id="@+id/currentTimeTv"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_margin="8dp"
           android:text="00:00"/>
 
       <TextView
-          android:id="@+id/totalTimeTextView"
+          android:id="@+id/totalTimeTv"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
