--- a/Music Player/Stage 3/src/main/res/layout/activity_main.xml
+++ b/Music Player/Stage 3/src/main/res/layout/activity_main.xml
@@ -6,78 +6,78 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-  <Button
-      android:id="@+id/search_button"
-      android:layout_width="0dp"
-      android:layout_weight="9"
-      android:layout_height="wrap_content"
-      android:text="Search"
-      android:layout_margin="8dp"/>
-</LinearLayout>
-
-<ScrollView
-    android:layout_height="0dp"
-    android:layout_weight="1"
-    android:layout_width="match_parent"
-    tools:context=".MainActivity">
   <LinearLayout
-      android:id="@+id/song_list"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+    <Button
+        android:id="@+id/searchButton"
+        android:layout_width="0dp"
+        android:layout_weight="9"
+        android:layout_height="wrap_content"
+        android:text="Search"
+        android:layout_margin="8dp"/>
+  </LinearLayout>
+
+  <ScrollView
+      android:layout_height="0dp"
+      android:layout_weight="1"
+      android:layout_width="match_parent"
+      tools:context=".MainActivity">
+    <LinearLayout
+        android:id="@+id/songList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+    </LinearLayout>
+  </ScrollView>
+  <LinearLayout
+      android:id="@+id/controllerBar"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">
-  </LinearLayout>
-</ScrollView>
-<LinearLayout
-    android:id="@+id/controller_bar"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-  <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:orientation="horizontal">
-    <TextView
-        android:id="@+id/current_time_view"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:text="00:00"/>
+        android:orientation="horizontal">
+      <TextView
+          android:id="@+id/currentTimeTv"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_margin="8dp"
+          android:text="00:00"/>
 
-    <TextView
-        android:id="@+id/total_time_view"
-        android:layout_width="0dp"
-        android:layout_weight="1"
+      <TextView
+          android:id="@+id/totalTimeTv"
+          android:layout_width="0dp"
+          android:layout_weight="1"
+          android:layout_height="wrap_content"
+          android:layout_margin="8dp"
+          android:gravity="end"
+          android:text="00:00" />
+    </LinearLayout>
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:gravity="end"
-        android:text="00:00" />
-  </LinearLayout>
-  <SeekBar
-      android:id="@+id/seekbar"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_margin="8dp"/>
-  <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:id="@+id/controller_Bar"
-      android:orientation="horizontal">
+        android:layout_margin="8dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/controller_Bar"
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/play_pause_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Play"/>
-    <Button
-        android:id="@+id/stop_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Stop"/>
+      <Button
+          android:id="@+id/playPauseButton"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:text="Play"/>
+      <Button
+          android:id="@+id/stopButton"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:text="Stop"/>
+    </LinearLayout>
   </LinearLayout>
-</LinearLayout>
 </LinearLayout>
