--- a/Music Player/Stage 3/src/main/res/layout/fragment_song.xml
+++ b/Music Player/Stage 3/src/main/res/layout/fragment_song.xml
@@ -14,20 +14,20 @@
         android:id="@+id/song_fragment_relative_layout"
         tools:context=".SongFragment">
         <TextView
-            android:id="@+id/song_title"
+            android:id="@+id/songTitleTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Wisdom"
-            android:layout_toEndOf="@id/song_status"/>
+            android:layout_toEndOf="@id/songStatusImgBtn"/>
         <TextView
-            android:id="@+id/song_artist"
+            android:id="@+id/songArtistTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Guggenheim grotto"
-            android:layout_below="@id/song_title"
-            android:layout_toEndOf="@id/song_status"/>
+            android:layout_below="@id/songTitleTv"
+            android:layout_toEndOf="@id/songStatusImgBtn"/>
         <ImageButton
-            android:id="@+id/song_status"
+            android:id="@+id/songStatusImgBtn"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/ic_action_play"
