--- a/Music Player/Stage 3/src/main/res/layout/activity_main.xml
+++ b/Music Player/Stage 3/src/main/res/layout/activity_main.xml
@@ -22,7 +22,8 @@ android:orientation="vertical">
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="100"
-      android:orientation="vertical">
+      android:orientation="vertical"
+      tools:listitem="@layout/list_item_song">
   </androidx.recyclerview.widget.RecyclerView>
 
   <LinearLayout
