--- a/Music Player/Stage 4/src/main/res/layout/activity_main.xml
+++ b/Music Player/Stage 4/src/main/res/layout/activity_main.xml
@@ -6,48 +6,45 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-  <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content">
-    <Button
-        android:id="@+id/search_button"
-        android:layout_width="0dp"
-        android:layout_weight="9"
-        android:layout_height="wrap_content"
-        android:text="Search"
-        android:layout_margin="8dp"/>
-  </LinearLayout>
 
-  <ScrollView
-      android:layout_height="0dp"
-      android:layout_weight="1"
+  <Button
+      android:id="@+id/searchButton"
       android:layout_width="match_parent"
-      tools:context=".MainActivity">
-    <LinearLayout
-        android:id="@+id/song_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-    </LinearLayout>
-  </ScrollView>
+      android:layout_weight="0"
+      android:layout_height="wrap_content"
+      android:text="Search"
+      android:layout_margin="8dp"/>
+
+
+  <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/songList"
+      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+      android:layout_width="match_parent"
+      android:layout_height="0dp"
+      android:layout_weight="100"
+      android:orientation="vertical"
+      tools:listitem="@layout/list_item_song">
+  </androidx.recyclerview.widget.RecyclerView>
+
   <LinearLayout
-      android:id="@+id/controller_bar"
+      android:id="@+id/controllerBar"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:layout_weight="0"
       android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
       <TextView
-          android:id="@+id/current_time_view"
+          android:id="@+id/currentTimeTv"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_margin="8dp"
           android:text="00:00"/>
 
       <TextView
-          android:id="@+id/total_time_view"
+          android:id="@+id/totalTimeTv"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
@@ -56,7 +53,7 @@
           android:text="00:00" />
     </LinearLayout>
     <SeekBar
-        android:id="@+id/seekbar"
+        android:id="@+id/seekBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"/>
@@ -66,18 +63,18 @@
         android:id="@+id/controller_Bar"
         android:orientation="horizontal">
 
-      <ImageButton
-          android:id="@+id/play_pause_button"
+      <Button
+          android:id="@+id/playPauseButton"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
-          android:src="@drawable/ic_action_play"/>
-      <ImageButton
-          android:id="@+id/stop_button"
+          android:text="Play/Pause"/>
+      <Button
+          android:id="@+id/stopButton"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
-          android:src="@drawable/ic_action_stop"/>
+          android:text="Stop"/>
     </LinearLayout>
   </LinearLayout>
 </LinearLayout>
