--- a/Music Player/Stage 4/src/main/res/layout/activity_main.xml
+++ b/Music Player/Stage 4/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="100"
+      android:layout_marginHorizontal="8dp"
       android:orientation="vertical"
       tools:listitem="@layout/list_item_song">
   </androidx.recyclerview.widget.RecyclerView>
