stage4 - added Stage4UnitTest.kt

--- a/Music Player/Stage 4/src/main/res/layout/list_item_song.xml
+++ b/Music Player/Stage 4/src/main/res/layout/list_item_song.xml
@@ -11,18 +11,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Wisdom"
-        android:layout_toEndOf="@id/songStatusImgBtn"/>
+        android:layout_toEndOf="@id/songItemPlayPauseImgBtn"/>
     <TextView
         android:id="@+id/songArtistTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Guggenheim grotto"
         android:layout_below="@id/songTitleTv"
-        android:layout_toEndOf="@id/songStatusImgBtn"
+        android:layout_toEndOf="@id/songItemPlayPauseImgBtn"
         android:layout_toStartOf="@id/songDurationTv"
         />
     <ImageButton
-        android:id="@+id/songStatusImgBtn"
+        android:id="@+id/songItemPlayPauseImgBtn"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/ic_action_play"
